samples/task/valid/R21.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/><substeps><substep><cmd>Sub-step command</cmd><info><p>Sub-step info</p></info></substep></substeps></step></steps>
  </taskbody>
</task>