samples/task/invalid/R25.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/><substeps><p>Not a substep</p></substeps></step></steps>
  </taskbody>
</task>